💄 Make sure `sui-select` text gets correctly aligned.

--- a/assets/scss/shared-ui/_select2.scss
+++ b/assets/scss/shared-ui/_select2.scss
@@ -8,6 +8,7 @@
 			min-width: 100%;
 			max-width: 100%;
 			display: block;
+			text-align: left;
 
 			// STATE: Default.
 			.selection {
@@ -545,6 +546,7 @@
 
 		+ .sui-select {
 			direction: rtl;
+			text-align: right;
 
 			.selection {
 
